--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,8 @@
 campo.nome.obrigatorio = o campo nome é obrigatório
 campo.cpf.obrigatorio = o campo CPF é obrigatório
 campo.cpf.invalido = o  CPF esta Inválido
+
+campo.descricao.obrigatorio = o campo Descricao é obrigatório
+campo.preco.obrigatorio = o campo Preco é obrigatório
+campo.data.obrigatorio = o campo Data é obrigatório
+campo.cliente.obrigatorio = o campo Cliente é obrigatório
