--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.descricao.obrigatorio = o campo Descricao é obrigatório
 campo.preco.obrigatorio = o campo Preco é obrigatório
 campo.data.obrigatorio = o campo Data é obrigatório
 campo.cliente.obrigatorio = o campo Cliente é obrigatório
+
+campo.login.obrigatorio = o campo Login é obrigatório
+campo.senha.obrigatorio = o campo Senha é obrigatório
